# ITK-code

./: README.md
tools-code/read-write/: CMakeLists.txt  read-write.cpp
tools-code/批量修改像素值/: ChangePixel.cpp
tools-code/提取三维数据中的某层/: CMakeLists.txt  ExtractImageFilter.cpp
tools-code/改变图像像素/: CMakeLists.txt  ChangePixel.cpp  run
tools-code/遍历图像像素/: CMakeLists.txt  getPixel.cpp
图谱－分割相关代码/AddemptyUpload/: AddemptyUpload.cpp  CMakeLists.txt  README.md  addem
图谱－分割相关代码/MASKImage-code/: CMakeLists.txt  MaskImageFilter.cpp  README.md
图谱－分割相关代码/ROI-分割代码/: MAS_Elastix.cpp  MAS_Elastix.h  README.md
图谱－分割相关代码/UpsampleVolume_char-label/: CMakeLists.txt  UpsampleVolume_char.cpp
图谱－分割相关代码/UpsampleVolume_short-img/: CMakeLists.txt  UpsampleVolume_short.cpp
图谱－分割相关代码/addEmptySlices_float/: README.md  addEmptySlices.cpp
图谱－分割相关代码/addEmptySlices_short/: CMakeLists.txt  README.md  addEmptySlices.cpp
图谱－分割相关代码/getSmallROI/: README.md  getROI.cpp
图谱－分割相关代码/img_txt/: interpolate0to3.cpp  mkdir-file
图谱－分割相关代码/label_txt/: README.md  avgTranform.cpp  update
图谱－分割相关代码/nrrd2nii/: CMakeLists.txt  README.md  nrrd2nii  nrrd2nii.cpp  update
图谱－分割相关代码/training-code/: CMakeLists.txt  Traditional_Regi_Elastix.cpp  Traditional_Regi_Elastix.h  main.cpp
图谱－分割相关代码/分块代码/meshSegmetation/: CMakeLists.txt  DCELFace.cpp  DCELFace.h  DCELHalfEdge.cpp  DCELHalfEdge.h  DCELMesh.cpp  DCELMesh.h  DCELTools.cpp  DCELTools.h  DCELVertex.cpp  DCELVertex.h  HalfEdgeList.cpp  HalfEdgeList.h  Vector.cpp  Vector.h  global.h  meshSeg.cpp  utils.cpp  utils.h
图谱－分割相关代码/求分割精度代码/: CMakeLists.txt  EvaluateSegmentationResult.cpp  README.md
(+196 files in other folders)
